# xgb

./: README.md
cmake/: test-all.sh
cmake/arch/: aarch64-linux-gnu-gcc.cmake  x86_64-linux-gnu-gcc.cmake  x86_64-w64-mingw32-gcc.cmake
cmake/test/: CMakeLists.txt  CMakePresets.json  main.cpp
cmake/toolchain/: aarch64-linux-gnu-gcc.cmake  x86_64-linux-gnu-gcc.cmake  x86_64-w64-mingw32-gcc.cmake  x86_64-w64-windows-msvc.cmake
cmake/toolchain/shared/: gcc.cmake  msvc.cmake  windows.cmake
cmake/utils/: copyfile.cmake  empackager.cmake  inlineres.cmake  yaml.cmake
docker/: Dockerfile  example-install.bash
docker/scripts/: install-emsdk.bash
docker/scripts/debian/: apt-config-aarch64.bash  apt-config-arch.bash  apt-config-cmake.bash  apt-config-multiarch.bash  apt-config-winehq.bash  apt-gen-sources.bash  apt-install-cross-g++.bash  apt-install-foreign.bash  apt-install-mingw64.bash  apt-install-toolchains.bash
docker/scripts/mingw/: install-glfw-mingw.sh  install-openal-mingw.sh  mingw-paths.sh
